log
Thu, Mar 27, 2025  9:23:15 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
25021aa
Thu, Mar 27, 2025  9:25:16 PM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 15/70
c248916
Thu, Mar 27, 2025  9:29:28 PM: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
8358878
Thu, Mar 27, 2025  9:37:56 PM: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  0|0
d8d398d
Thu, Mar 27, 2025  9:38:43 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
90d81a6
Thu, Mar 27, 2025  9:41:32 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
fa295c5
Thu, Mar 27, 2025  9:43:52 PM: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
0ce79d1
Thu, Mar 27, 2025  9:52:11 PM: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  9|3
total_score: 35/70
2637b25
Thu, Mar 27, 2025  9:56:29 PM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:69:28: error: expected expression before 'List'
     if (list->tail == NULL)List->tail =nuevoNodo;
                            ^~~~
Compilation failed
c3d5bdf
Thu, Mar 27, 2025  9:56:39 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
51625be
Thu, Mar 27, 2025 10:35:13 PM: 
 list.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  10|2
total_score: 45/70
dadda7a
Thu, Mar 27, 2025 10:38:38 PM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  11|1
total_score: 55/70
cc633a8
Sat, Mar 29, 2025  8:03:03 PM: 
 list.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
627221d
